[package]

name = "cantypes"
license = "MIT/Apache-2.0"
authors = ["Tim Lucas Sabelmann <tsabelmann>"]
# categories = ["api-bindings"]
description = "Common CAN-bus abstractions."
homepage = "https://github.com/tsabelmann/cantypes-rs"
keywords = ["canbus", "can", "api", "frame", "data", "remote"]
repository = "https://github.com/tsabelmann/cantypes-rs"
readme = "README.md"
version = "0.1.0"
edition = "2021"

[dependencies]
